--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^12.23.12",
     "gray-matter": "^4.0.3",
     "next": "15.4.6",
     "react": "19.1.0",
